-
Bug
-
Resolution: Done
-
P1: Critical
-
5.5.0 Alpha
-
None
-
iOS 8.2 and 8.3
-
-
c415e6972b371acc288cd835f5635936215c615f (qtdeclarative)
I have an assertion firing in one of my projects when switching the target from 5.4.1 iOS to 5.5 alpha. The assertion currently only triggers on iOS (8.2) and not on Android.
The assertion happens in method RuntimeHelpers::convertObject in qv4runtime.cpp file. I attached the stacktrace together with an object dump of the affected object. The project uses the Accelerometer item from Qt Sensors and does some calculations with the onReadingChanged signal. The error however looks much more generic than the reading changed signal.
As it is currently not reproducible outside of my project for me I would be happy to provide more information on demand. Are there any compile-time defines which can be enabled to get a more verbose log output which V4 object is triggering the assertion?
- duplicates
-
QTBUG-45906 iOS Qt 5.5.0a QML engine nullifies values in array if used with push/shift resulting in assertion crashes
-
- Closed
-
-
QTBUG-45231 Crash after gc sweep with asynchronous code
-
- Closed
-
For Gerrit Dashboard: QTBUG-45888 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
111737,3 | Fix memory corruption in array handling | 5.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |